--- a/Domino/app/src/main/res/layout/activity_juego.xml
+++ b/Domino/app/src/main/res/layout/activity_juego.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.domino.JuegoActivity">
+    android:layout_height="match_parent" >
+
+
 
     <TextView
         android:id="@+id/textView2"
@@ -12,4 +12,38 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="24sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal"
+        android:id="@+id/LayoutDropZone"
+        android:layout_marginTop="70dp"
+        >
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:id="@+id/Layout_fichas_jugador"
+        android:layout_width="500dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="280dp"
+        >
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/agregarFicha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="15dp"
+        android:layout_toEndOf="@id/Layout_fichas_jugador"
+        app:srcCompat="@android:drawable/ic_input_add" />
+
+
 </RelativeLayout>
