Verificaciones de movimiento Verifica si es el turno Verifica si la ficha que esta moviendo tiene uno de los numeros de movimiento le da vuelta a las fichas que no son dobles Ya no borra la imagen cuando se mueve, solo si el movimiento fue exitoso etc...

--- a/Domino/app/src/main/res/layout/activity_juego.xml
+++ b/Domino/app/src/main/res/layout/activity_juego.xml
@@ -19,6 +19,7 @@
         android:orientation="horizontal"
         android:id="@+id/LayoutDropZone"
         android:layout_marginTop="70dp"
+        android:gravity="center_horizontal"
         >
 
 
