--- a/Domino/app/src/main/res/layout/activity_juego.xml
+++ b/Domino/app/src/main/res/layout/activity_juego.xml
@@ -7,16 +7,39 @@
 
 
     <TextView
+        android:id="@+id/turnotext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Turno del Jugador:   "
+        android:textSize="18sp"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/turno"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:textSize="18sp"
+        android:layout_marginTop="10dp"
+        android:layout_alignEnd="@id/turnotext" />
+
+    <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textSize="24sp" />
+        android:textSize="12sp"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:orientation="horizontal"
+        android:layout_alignTop="@id/textView2"
         android:id="@+id/LayoutDropZone"
         android:layout_marginTop="70dp"
         android:gravity="center_horizontal"
@@ -29,10 +52,12 @@
     <LinearLayout
         android:orientation="horizontal"
         android:id="@+id/Layout_fichas_jugador"
+        android:layout_alignTop="@id/LayoutDropZone"
         android:layout_width="500dp"
         android:layout_height="70dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="160dp"
+        android:gravity="center_horizontal"
         >
 
     </LinearLayout>
@@ -41,7 +66,8 @@
         android:id="@+id/agregarFicha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="270dp"
+        android:layout_alignTop="@id/LayoutDropZone"
+        android:layout_marginTop="170dp"
         android:layout_marginLeft="15dp"
         android:layout_toEndOf="@id/Layout_fichas_jugador"
         app:srcCompat="@android:drawable/ic_input_add" />
