--- a/Domino/app/src/main/res/layout/activity_juego.xml
+++ b/Domino/app/src/main/res/layout/activity_juego.xml
@@ -2,52 +2,63 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
+    android:layout_height="match_parent"
+    >
 
 
     <TextView
         android:id="@+id/turnotext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Turno del Jugador:   "
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="10dp"
+        android:text="Turno del Jugador:   "
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/turno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@id/turnotext"
+        android:layout_marginTop="10dp"
         android:text="1"
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        android:layout_alignEnd="@id/turnotext" />
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="12sp"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:orientation="horizontal"
-        android:layout_alignTop="@id/textView2"
-        android:id="@+id/LayoutDropZone"
+    <HorizontalScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_marginTop="70dp"
-        android:gravity="center_horizontal"
+        android:id="@+id/scrollDropZone"
         >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:paddingRight="10dp"
+            android:orientation="horizontal"
+            android:layout_alignTop="@id/turno"
+            android:id="@+id/LayoutDropZone"
 
-    </LinearLayout>
+            android:gravity="center_horizontal"
+            >
 
+
+        </LinearLayout>
+
+    </HorizontalScrollView>
+
+<HorizontalScrollView
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_marginLeft="15dp"
+    android:layout_marginTop="160dp"
+    android:layout_alignTop="@id/scrollDropZone"
+    android:id="@+id/scrollfichasJugador"
+    >
 
     <LinearLayout
         android:orientation="horizontal"
@@ -55,21 +66,23 @@
         android:layout_alignTop="@id/LayoutDropZone"
         android:layout_width="500dp"
         android:layout_height="70dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="160dp"
+
         android:gravity="center_horizontal"
         >
 
     </LinearLayout>
 
+</HorizontalScrollView>
+
+
     <ImageButton
         android:id="@+id/agregarFicha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/LayoutDropZone"
+        android:layout_alignTop="@id/scrollDropZone"
         android:layout_marginTop="170dp"
-        android:layout_marginLeft="15dp"
-        android:layout_toEndOf="@id/Layout_fichas_jugador"
+        android:layout_marginLeft="-70dp"
+        android:layout_toEndOf="@id/scrollfichasJugador"
         app:srcCompat="@android:drawable/ic_input_add" />
 
 
